--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "styled-components": "^6.0.8",
+    "swiper": "^11.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
