Chore: Change browserRouter basename

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Sangyeonglee353.github.io/react-daily-cloth-app/",
+  "homepage": "https://sangyeonglee353.github.io/react-daily-cloth-app/",
   "name": "react-daily-cloth-app",
   "version": "0.1.0",
   "private": true,
